R2 T10 - theta vector bold

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -186,8 +186,8 @@ where:
     \item $p(x_i|\mathbf{\Theta})$ denotes the overall mixture model's density or mass function for observation $x_i$.
     \item $G$ is the total number of component distributions in the mixture.
     \item $\pi_g$ represents the mixing proportion of the $g$th component, satisfying $0 \leq \pi_g \leq 1$ and $\sum_{g=1}^{G} \pi_g = 1$.
-    \item $f(x_i|\theta_g)$ is the probability density function (pdf) or probability mass function (pmf) of the $g$th component distribution evaluated at $x_i$.
-    \item $\theta_g$ denotes the parameter vector of the $g$th component distribution.
+    \item $f(x_i|\boldsymbol{\theta})$ is the probability density function (pdf) or probability mass function (pmf) of the $g$th component distribution evaluated at $x_i$.
+    \item $\boldsymbol{\theta}$ denotes the parameter vector of the $g$th component distribution.
     \item $\mathbf{\Theta}$ symbolizes the complete set of parameters for the mixture model, including both the mixing proportions $\{\pi_1, \ldots, \pi_G\}$ and the parameters of the component distributions $\{\theta_1, \ldots, \theta_G\}$.
 \end{itemize}
 
