--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -177,16 +177,19 @@ This advantage stems from two key factors: firstly, ordinal data do not presuppo
 Finite mixture models have emerged as a versatile and powerful statistical tool, garnering increasing attention across various scientific and research disciplines. These models, predicated on the assumption that observed data arise from a blend of several probability distributions, each representing a distinct subpopulation, have revolutionized our approach to understanding complex data structures. The designation ``finite'' in finite mixture models is pivotal, indicating the specific, but variable, number of components or subgroups within the data. This finite aspect offers a balance between model complexity and interpretability, allowing for detailed yet manageable analysis of diverse datasets.
 
 The Finite mixture model is defined as:
+
+Given observations $Y = \{y_{i}\}$ we may wish to cluster the rows,
+each m-dimensional row $y_i$ $(i = 1, \dots , n) $ is assumed drawn from component $(g_1, \dots, g_G)$ finite mixture
 \begin{equation}
 % p(x_i|\mathbf{\Theta}) = \sum_{g=1}^{G} \pi_g f(x_i|\bm{\theta}_g)
-p(x_i|\mathbf{\Theta}) = \sum_{g=1}^{G} \pi_g f(x_i|\boldsymbol{\theta}_g)
+p(y_i|\mathbf{\Theta}) = \sum_{g=1}^{G} \pi_g f(y_i|\boldsymbol{\theta}_g)
 \end{equation}
 where:
 \begin{itemize}
-    \item $p(x_i|\mathbf{\Theta})$ denotes the overall mixture model's density or mass function for observation $x_i$.
+    \item $p(y_i|\mathbf{\Theta})$ denotes the overall mixture model's density or mass function for observation $x_i$.
     \item $G$ is the total number of component distributions in the mixture.
     \item $\pi_g$ represents the mixing proportion of the $g$th component, satisfying $0 \leq \pi_g \leq 1$ and $\sum_{g=1}^{G} \pi_g = 1$.
-    \item $f(x_i|\boldsymbol{\theta})$ is the probability density function (pdf) or probability mass function (pmf) of the $g$th component distribution evaluated at $x_i$.
+    \item $f(y_i|\boldsymbol{\theta})$ is the probability density function (pdf) or probability mass function (pmf) of the $g$th component distribution evaluated at $x_i$.
     \item $\boldsymbol{\theta}$ denotes the parameter vector of the $g$th component distribution.
     \item $\mathbf{\Theta}$ symbolizes the complete set of parameters for the mixture model, including both the mixing proportions $\{\pi_1, \ldots, \pi_G\}$ and the parameters of the component distributions $\{\theta_1, \ldots, \theta_G\}$.
 \end{itemize}
@@ -242,6 +245,10 @@ This constraint allows the model to adapt to the inherent ordering of categories
 % $0 = \phi_1 \leq \phi_2 \leq \ldots \leq \phi_K = 1.$
 % Stereotype model is unconstrained, $\phi$ add restricts to make it works for ordinal data.
 % This allows the effects to vary across categories but constrains them to follow a scaled version of a common pattern.
+
+One way to model the clusters is to suppose that each cluster has an 
+  effect $\alpha_g$ which changes the probability of the value for one variable and  observation $i$ being in a particular category.
+  
 
 % 123
 
