--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -403,11 +403,24 @@ The predictive model can also be applied to future observations ($Y'''$). Using 
 
 % This pragmatic approach underscores the model's adaptability and its capacity to handle real-world data complexities, offering a robust tool for predictive clustering in various domains.
 
-\subsection{Application Context and Datasets}
+% \subsection{Application Context and Datasets}
 
-The practical utility of our cluster prediction method is exemplified through its application to the Public Sector Commission WA Employee Perception Survey 2016. Conducted by the Public Sector Commission of Western Australia, this survey gathered insights into employee perceptions on pivotal workplace factors, such as leadership dynamics, communication efficacy, and the balance between work and life. The survey's findings are instrumental in deciphering the nuances of organizational culture and pinpointing potential areas for enhancement within the public sector.
+% The practical utility of our cluster prediction method is exemplified through its application to the Public Sector Commission WA Employee Perception Survey 2016. Conducted by the Public Sector Commission of Western Australia, this survey gathered insights into employee perceptions on pivotal workplace factors, such as leadership dynamics, communication efficacy, and the balance between work and life. The survey's findings are instrumental in deciphering the nuances of organizational culture and pinpointing potential areas for enhancement within the public sector.
 
-The 2016 iteration of the survey witnessed participation from employees across 11 public sector entities, boasting a response rate of 53\% and culminating in 3,883 valid responses. This dataset, encompassing individual responses, the survey instrument, and a summary of results, is disseminated under the Creative Commons Attribution 3.0 Australia license, providing a rich resource for analysis and application of the discussed predictive clustering approach.
+% The 2016 iteration of the survey witnessed participation from employees across 11 public sector entities, boasting a response rate of 53\% and culminating in 3,883 valid responses. This dataset, encompassing individual responses, the survey instrument, and a summary of results, is disseminated under the Creative Commons Attribution 3.0 Australia license, providing a rich resource for analysis and application of the discussed predictive clustering approach.
+
+
+\subsection{Future Application Context and Dataset Plans}
+
+In the future, we aim to validate the effectiveness of our cluster prediction method by planning its application to the Public Sector Commission WA Employee Perception Survey 2016. 
+This particular survey, conducted by the Public Sector Commission of Western Australia, is a rich resource that offers insights into various pivotal workplace factors, including leadership dynamics, communication efficacy, and work-life balance. 
+Its findings are critical for understanding the nuances of organizational culture and identifying potential areas for improvement within the public sector.
+
+The 2016 survey edition attracted participation from employees across 11 public sector entities, achieving a response rate of 53\% and collecting 3,883 valid responses. 
+This comprehensive dataset includes individual responses, the survey instrument, and a summary of results. It is available under the Creative Commons Attribution 3.0 Australia license, making it an ideal candidate for analyzing and applying our discussed predictive clustering approach.
+
+It is important to clarify that, as of now, we have not yet tested our method on this dataset due to constraints on our timeline. This step remains a crucial part of our research agenda, and we intend to pursue it as a future work direction. 
+Our anticipation is that the application of our predictive clustering method to this dataset will not only showcase its utility but also provide actionable insights for enhancing public sector workplace environments.
 
 \section{Conclusion and Future Directions}
 
