R2 T4 -add clustord repo cite

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -171,3 +171,11 @@ URL = {https://doi.org/10.1214/09-SS053}
   url = {https://data.gov.au/data/dataset/public-sector-commission-wa-employee-perception-survey-2016},
   note = {Accessed: 2024-03-18}
 }
+
+@misc{clustord2024,
+  author = {McMillan, Louise and Seers, Blake},
+  title = {ClustOrd: A tool for ordering and clustering},
+  year = {2024},
+  howpublished = {\url{https://github.com/vuw-clustering/clustord}},
+  note = {Accessed: 2024-04-04}
+}
