--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -179,3 +179,13 @@ URL = {https://doi.org/10.1214/09-SS053}
   howpublished = {\url{https://github.com/vuw-clustering/clustord}},
   note = {Accessed: 2024-04-04}
 }
+
+@article{pledger2014multivariate,
+  title={Multivariate methods using mixtures: Correspondence analysis, scaling and pattern-detection},
+  author={Pledger, Shirley and Arnold, Richard},
+  journal={Computational Statistics \& Data Analysis},
+  volume={71},
+  pages={241--261},
+  year={2014},
+  publisher={Elsevier}
+}
