R2 T12 - fix wrong cite

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -189,3 +189,22 @@ URL = {https://doi.org/10.1214/09-SS053}
   year={2014},
   publisher={Elsevier}
 }
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
+  journal={Journal of the royal statistical society: series B (methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+
+@book{mclachlan1988mixture,
+  title={Mixture models: Inference and applications to clustering},
+  author={McLachlan, Geoffrey J and Basford, Kaye E},
+  volume={38},
+  year={1988},
+  publisher={M. Dekker New York}
+}
