--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -141,7 +141,7 @@ Model-based clustering is often more suitable for ordinal data—data that conta
 
 \subsection{Early Developments (2000--2010)}
 
-McLachlan \& Basford 1988 (~\cite{mclachlan1988mixture}) start to marked a crucial step in mixture model applications by simplifying the maximum likelihood estimation (MLE) using the EM algorithm.
+McLachlan \& Basford 1988 (~\cite{mclachlan1988mixture}) start to marked a crucial step in mixture model applications by simplifying the maximum likelihood estimation (MLE) using the EM algorithm (~\cite{dempster1977maximum}).
 
 McLachlan \& Peel's 2000 book further elaborate on this approach. This approach, utilizing $Y_j$ and $Z_j$, not only enhanced the computational efficiency of MLE but also laid a foundational strategy for Bayesian approaches and MCMC methods in mixture models. The paper’s impact is evident in its widespread adoption across various domains, from bioinformatics to finance, where mixture models are employed (~\cite{mclachlan2000finite}).
 
@@ -431,7 +431,7 @@ Our anticipation is that the application of our predictive clustering method to 
 
 \section{Conclusion and Future Directions}
 
-The evolution of mixture models from the foundational work of McLachlan in 2000 to the advanced developments up to 2019 exemplifies a trajectory marked by significant growth and innovation. These advancements have not only addressed longstanding challenges but also paved the way for future breakthroughs. A critical aspect of this ongoing evolution is the integration of machine learning with traditional statistical methods, enhancing the predictive accuracy of cluster memberships for new data points—a capability increasingly vital in fields such as artificial intelligence, where precision in pattern recognition and decision-making is paramount.
+The evolution of mixture models, from the foundational work of (~\cite{dempster1977maximum}), who introduced the Expectation-Maximization (E-M) algorithm, to McLachlan's advanced developments up to 2019, exemplifies a trajectory marked by significant growth and innovation. These advancements have not only addressed longstanding challenges but also paved the way for future breakthroughs. A critical aspect of this ongoing evolution is the integration of machine learning with traditional statistical methods, enhancing the predictive accuracy of cluster memberships for new data points—a capability increasingly vital in fields such as artificial intelligence, where precision in pattern recognition and decision-making is paramount.
 
 The proposed methodology for cluster prediction in ordinal data, integrating finite mixture models with regression analysis, signals a pivotal advancement in the statistical analysis domain. Our plan to utilize the Public Sector Commission WA Employee Perception Survey 2016 as a benchmark to evaluate the performance of this approach underscores our commitment to rigorous empirical validation. This dataset serves as a crucial testbed for demonstrating the method's effectiveness in navigating the intricacies of ordinal data and its potential for broad applicability across diverse research areas.
 
