R2 T5 - more cites of statical based vs distance based

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -208,3 +208,49 @@ URL = {https://doi.org/10.1214/09-SS053}
   year={1988},
   publisher={M. Dekker New York}
 }
+
+% k - mean
+@article{macqueen1967some,
+  title={Some methods for classification and analysis of multivariate observations},
+  author={MacQueen, James},
+  booktitle={Proceedings of the fifth Berkeley symposium on mathematical statistics and probability},
+  volume={1},
+  number={14},
+  pages={281--297},
+  year={1967},
+  organization={Oakland, CA, USA}
+}
+
+% model based 
+@book{fraley2002model,
+  title={Model-based clustering, discriminant analysis, and density estimation},
+  author={Fraley, Chris and Raftery, Adrian E},
+  journal={Journal of the American statistical Association},
+  volume={97},
+  number={458},
+  pages={611--631},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+% hierarchical clustering schemes
+@article{johnson1967hierarchical,
+  title={Hierarchical clustering schemes},
+  author={Johnson, Stephen C},
+  journal={Psychometrika},
+  volume={32},
+  number={3},
+  pages={241--254},
+  year={1967},
+  publisher={Springer}
+}
+
+% DBSCAN
+@inproceedings{ester1996density,
+  title={A density-based algorithm for discovering clusters in large spatial databases with noise},
+  author={Ester, Martin and Kriegel, Hans-Peter and Sander, J{\"o}rg and Xu, Xiaowei},
+  booktitle={Proceedings of the Second International Conference on Knowledge Discovery and Data Mining (KDD-96)},
+  pages={226--231},
+  year={1996},
+  organization={AAAI Press}
+}
